--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <div class = "container">
 
         <div class = "photo11">
-               <img src ="ruby1.jpg" alt= "Man smashing screen" height =200px width =300>
+               <img src ="rails1.jpg" alt= "Man smashing screen" height =200px width =300>
         </div>
 
         <div class = "photo11">
-            <img src = "ruby2.jpg" alt = "lightbulb moment" height = 200px width = 300px>
+            <img src = "rails2.jpg" alt = "lightbulb moment" height = 200px width = 300px>
         </div>
     </div>   
 
@@ -28,11 +28,11 @@
     
         <div class ="para">
 
-            <p>This was a very interesting project where we were required to essentially find an API and be able to ask questions and respond to get information back.</p> <br>
-                I ended up finding a 'Dog Facts' API - Which was quite interesting and fun to do. I initially decided a movie database however the movie api only consisted data about songs!.<br> 
-                The whole part of this project was to find random information about Dogs.  <p><br> The first question that comes up is 'How Many dog facts do you want?'. This is where you can choose how many you want and the limit is upto 100.<p><br> Then a question is asked 'Do you want them in random order?'
-                And that is a simple Y/N option. The next question followed up is 'Do you want to know more facts?' - Which again is a yes or no answer.
-                The Gemfile used for scraping is Mechanize. This is how i was able to get the information back from the API.</p>
+            <p>This was a fun and straightforward projet where we required to do build ruby rails project.</p> <br>
+                I decided t build a weather app with a weather API that i found on github - Which was quite interesting and fun to do. I initially decided a movie database however the movie api only consisted data about songs!.<br> 
+                The whole part of this project was to find random information about Dogs.  <p><br> The user just has to put in the city's weather they are searching for and it will display the relevant weather information<p><br> This was different to the ruby project as that was just a backend and kept simple with a series of questions. 
+                i used javascript and ruby for tha backend as this is what i know best.
+                
                 .<br>
             If you would like more information on what a gemfile is, then please check out this link.  <a href="https://www.youtube.com/watch?v=QDcf-Nga0Nw" target ="_blank" > click me!</a>
         <div>
@@ -44,8 +44,8 @@
         <h2>Stay Focused!!</h2>
         </div>
         <div class = "photo22">
-        <p>Some little motivation that keeps me going</p>
-            <img src = "img4.jpg" alt = "motivation" height = 200px width= 300px>
+        <p>A little funny motivation that keeps me going</p>
+            <img src = "rails3.jpg" alt = "motivation" height = 200px width= 300px>
             <p>food for thought!</p>
         </div>   
     </div>
