--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     
         <div class ="para">
 
-            <p>This was a fun and straightforward projet where we required to do build ruby rails project.</p> <br>
-                I decided t build a weather app with a weather API that i found on github - Which was quite interesting and fun to do. I initially decided a movie database however the movie api only consisted data about songs!.<br> 
-                The whole part of this project was to find random information about Dogs.  <p><br> The user just has to put in the city's weather they are searching for and it will display the relevant weather information<p><br> This was different to the ruby project as that was just a backend and kept simple with a series of questions. 
+            <p>This was a fun and straightforward project where we required to do build a final ruby rails project.</p> <br>
+                I decided to make a Book review system which incorparates everything i have learnt in the last 6 months - Which was quite interesting and fun to do. I initially decided a movie database however the movie api only consisted data about songs!.<br> 
+                The whole point of this project is to review others peoples books and they can review the books that you have read.  <p><br> You can also sign up and create an account using autho O, this way your information is saved to your account.<p><br> This was different to the ruby project as that was just a backend and kept simple with a series of questions. 
                 i used javascript and ruby for tha backend as this is what i know best.
                 
                 .<br>
